--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@ db.put _id:'shimaore', name:'Stéphane Alnet'
 </ul>
 </section><section id="json-swiss-army-knifejq" class="slide level2">
 <h1><span class="try">JSON Swiss Army Knife</span>JQ</h1>
-<pre><code>rest -G \
+<pre class="sh"><code>rest -G \
   -d startkey='\&quot;rule:16171\&quot;' \
   -d endkey='\&quot;rule:1617999\&quot;' \
   https://couchdb.example.net/ruleset/_all_docs | \
@@ -402,6 +402,7 @@ rest -X POST --data-binary @- \
 <ul>
 <li><strong>CCNQ</strong> http://ccnq.shimaore.net/</li>
 <li><strong>Code</strong> https://github.com/shimaore/</li>
+<li><strong>Presentation</strong>: http://shimaore.github.io/2015-rmll-dev</li>
 <li><strong>Contact</strong> http://stephane.shimaore.net/</li>
 </ul>
 </section></section>
