--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@ rest -X POST --data-binary @- \
 </section><section id="thank-you-merci" class="slide level2">
 <h1>Thank you | Merci</h1>
 <ul>
-<li><strong>CCNQ</strong> http://ccnq.shimaore.net/</li>
+<li><strong>CCNQ4</strong> https://github.com/shimaore/ccnq4</li>
 <li><strong>Code</strong> https://github.com/shimaore/</li>
 <li><strong>Presentation</strong>: http://shimaore.github.io/2015-rmll-dev</li>
 <li><strong>Contact</strong> http://stephane.shimaore.net/</li>
